<resources>
    <string name="app_name">UbiBike</string>
    <string name="developers">Isabel Costa | Pedro Dias | Vicente Rocha</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid or doesn\'t exist</string>
    <string name="error_duplicated_username">This username already exists</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_stations_map">Station</string>
    <string name="title_activity_chat">UbiChat</string>
    <string name="title_activity_ubirides_history">UbiRides History</string>
    <string name="new_message">+</string>
    <string name="chat_table_test">+</string>
    <string name="save_credentials">Save credentials</string>

    <!-- Footer related -->

    <string name="footer_button_home">Home</string>
    <string name="footer_button_messenger">Messenger</string>
    <string name="footer_button_options">Options</string>

    <string name="title_activity_user_dashboard">Home</string>

    <string name="dashboard_menu_find_ride">Find UbiRide</string>
    <string name="dashboard_menu_rides_history">Rides History</string>
    <string name="dashboard_menu_find_peers">Ubi Connect</string>

    <string name="title_activity_options_menu">Options</string>
    <string name="options_report_bug">Report Bug</string>
    <string name="options_about">About</string>
    <string name="options_logout">Logout</string>

    <string name="title_activity_stations_list">UbiStations List</string>
    <string name="title_activity_about_menu">About</string>
    <string name="About">About The Project</string>
    <string name="cmov">This project was developed for the CMov course of 2016 @ist</string>
    <string name="title_activity_score_history">Score History</string>
    <string name="title_activity_create_new_trajectory">New Trajectory</string>

    <!-- Chat-->
    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>

    <string name="footer_button_ubiconnect">UbiConnect</string>
    <string name="dashboard_menu_my_points">Points</string>
    <string name="title_activity_give_points_or_chat">UbiConnect</string>
    <string name="ubiconnect_ubichat">UbiChat</string>
    <string name="ubiconnect_give_points">Give UbiPoints</string>
    <string name="title_activity_ubiconnect">UbiConnect</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="error_different_password">Passwords don\'t match</string>
    <string name="prompt_second_password">Repeat Password</string>
    <string name="title_activity_ubiride_history_maps">UbiRide Map</string>
    <string name="score_history_refresh_points">Refresh</string>
    <string name="title_activity_riding">RidingActivity</string>
    <string name="dashboard_menu_riding">Current Ride</string>
    <string name="title_activity_maps_activity_adf">Map</string>
    <string name="title_activity_maps123">Map</string>
    <string name="title_activity_ubi_ride_maps">UbiRide</string>
    <string name="title_activity_maps">Map</string>

    <!--Wifi-Direct-->
    <string name="port">10001</string>

    <string name="hello">Hello World, MsgSenderActivity!</string>

    <string name="sendButton">Send</string>
    <string name="connectButton">Connect</string>
    <string name="disconnectButton">Disconnect</string>
    <string name="serviceButton">WiFi On</string>
    <string name="cancelButton">WiFi Off</string>
    <string name="inRangeButton">In Range</string>
    <string name="inGroupButton">In Network</string>


    <string name="peersListButton">List Peers</string>
    <string name="sendPointsButton">Give Points</string>
</resources>
