<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MsgSenderActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/chat_person"
        android:layout_marginTop="54dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:paddingBottom="150dp">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <requestFocus />
        </EditText>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/idSendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendButton" />

            <Button
                android:id="@+id/idConnectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connectButton" />

            <Button
                android:id="@+id/idDisconnectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnectButton" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/idWifiOnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serviceButton" />

            <Button
                android:id="@+id/idWifiOffButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelButton" />

            <Button
                android:id="@+id/idInRangeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inRangeButton" />

            <Button
                android:id="@+id/idInGroupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inGroupButton" />

    	</LinearLayout>
        <EditText

            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:paddingBottom="200dp" />


    </LinearLayout>


    <include layout="@layout/dashboard_header" />

    <include layout="@layout/dashboard_footer" />

</android.support.design.widget.CoordinatorLayout>

