<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="launchClick"
        android:text="@string/options_report_bug"
        android:id="@+id/options_report_bug"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:theme="@android:style/ButtonBar"
        android:textAllCaps="true"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="false"
        android:textSize="@dimen/abc_dialog_padding_top_material" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_about"
        android:onClick="launchClick"
        android:id="@+id/options_about"
        android:layout_below="@+id/options_report_bug"
        android:layout_alignLeft="@+id/options_report_bug"
        android:layout_alignStart="@+id/options_report_bug"
        android:theme="@android:style/ButtonBar"
        android:textAllCaps="true"
        android:textSize="@dimen/abc_dialog_padding_top_material" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_logout"
        android:onClick="launchClick"
        android:id="@+id/options_logout"
        android:layout_below="@+id/options_about"
        android:layout_alignLeft="@+id/options_about"
        android:layout_alignStart="@+id/options_about"
        android:theme="@android:style/ButtonBar"
        android:textAllCaps="true"
        android:textSize="@dimen/abc_dialog_padding_top_material" />
</LinearLayout>
