<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <include layout="@layout/dashboard_header" android:id="@+id/header_layout"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/person_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
            android:gravity="center"
            style="@style/AppTheme" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:weightSum="1">

        <ListView
            android:id="@+id/peers_list_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:transcriptMode="alwaysScroll"
            android:stackFromBottom="true"
            android:layout_weight="1.24" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <requestFocus />

        </EditText>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/idSendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendButton" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <Button
                android:id="@+id/idSendPointsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendPointsButton" />

            <Button
                android:id="@+id/idListPeersButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peersListButton" />


            <Button
                android:id="@+id/idDisconnectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnectButton" />
        </LinearLayout>

        <include layout="@layout/dashboard_footer"
            android:layout_height="50dp"
            android:layout_width="fill_parent" android:id="@+id/footer_layout"/>

    </LinearLayout>

</LinearLayout>
